<resources>
    <string name="app_name">ISports</string>
    <string name="main_fragment_default">Main Fragment</string>
    <string name="loginButton_Text">Login</string>
    <string name="todo">To-Do</string>
    <string name="cadastro_fragment_default">Cadastro Fragment</string>
    <string name="explorar_fragment_default">Explorar Fragment</string>
    <string name="meus_jogos_fragment_default">Meus jogos Fragment</string>
    <string name="perfil_fragment_default">Perfil Fragment</string>
    <string name="menu_meus_jogos_title">Meus Jogos</string>
    <string name="menu_explorar_title">Explorar</string>
    <string name="menu_perfil_title">Perfil</string>
    <string name="image_view_logo_description">Logo do ISports</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_cadastro_label">Ainda não tem conta? Cadastre-se</string>
    <string name="signup_email_hint">E-mail</string>
    <string name="signup_confirm_password_hint">Confirm Password</string>
    <string name="signupbuttom_text">Cadastre-se</string>
    <string name="historico_string">Histórico</string>
    <string name="match_not_found">Nenhum jogo foi encontrado!</string>
    <string name="match_not_found_historico">Nenhum jogo foi encontrado no histórico!</string>
    <string name="dis_text">Distância (Km)</string>
    <string name="menu_historico_title">Histórico</string>
    <string name="explorar_date_de_text_default">Data De</string>
    <string name="explorar_date_ate_text_default">Data Ate</string>
    <string name="explorar_hora_de_text_default">Hora De</string>
    <string name="explorar_hora_ate_text_default">Hora Ate</string>
    <string name="explorar_filtrar_button_text">Filtrar</string>
    <string name="explorar_novo_jogo_text_view_text">+ Novo Jogo</string>
    <string-array name="tipos_jogos">
        <item>Todos</item>
        <item>Basquete</item>
        <item>Futsal</item>
        <item>Futebol</item>
        <item>Tenis</item>
        <item>Vôlei</item>
    </string-array>
    <string-array name="add_jogos">
        <item>Basquete</item>
        <item>Futsal</item>
        <item>Futebol</item>
        <item>Tenis</item>
        <item>Vôlei</item>
    </string-array>
    <string name="username_text">Username</string>
    <string name="signup_address_hint">Endereço</string>
    <string name="log_out_text">Log Out</string>
    <string name="data_text">Data</string>
    <string name="hour_text">Hora</string>
    <string name="novo_jogo_button_text">Novo Jogo</string>
    <string name="redefinir_senha_text">Redefinir Senha</string>
    <string name="novo_jogo_text_view">Novo Jogo</string>
    <string name="modalidade">Modalidade</string>
    <string name="data_dia">data_dia</string>
    <string name="time_jogo">time_jogo</string>
    <string name="endereco_jogo">endereco_jogo</string>
    <string name="modalidade_icone">modalidade_icone</string>
    <string name="login_email_hint">Email</string>
    <string name="fab_historic_description">Visualizando historico de jogos</string>
    <string name="fab_historic_text">HISTORICO</string>
    <string name="fab_historic_text_historico">Próximos</string>
    <string name="fab_add_jogo_description">Novo jogo</string>
    <string name="resetar_senha_button_text">Trocar a senha</string>
    <string name="login_esqueci_senha_label">Esqueci a senha</string>
    <string name="redefinir_senha_button_label">Redefinir senha</string>
    <string name="action_save_description">Salvar novo jogo</string>
    <string name="action_save_title">Novo jogo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_participar_text">PARTICIPAR</string>
    <string name="inicio">inicio</string>
    <string name="fim">fim</string>
    <string name="local">local</string>
    <string name="participantes">Participantes</string>
    <string name="text_sair">SAIR</string>
</resources>