<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/customborder">
    <TextView
        android:id="@+id/jogos_list_modalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:text="@string/modalidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/data_dia"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/jogos_list_modalidade"
        app:layout_constraintTop_toBottomOf="@+id/jogos_list_modalidade" />

    <TextView
        android:id="@+id/fim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time_jogo"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/inicio"
        app:layout_constraintTop_toBottomOf="@+id/inicio" />
    <TextView
        android:id="@+id/local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/endereco_jogo"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/inicio"
        app:layout_constraintTop_toBottomOf="@+id/fim" />

    <ImageView
        android:id="@+id/notes_list_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/modalidade_icone"
        android:src="@drawable/ic_baseline_sports_soccer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/local"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>