<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment"
    android:background="@color/black_tint_30">

    <ImageView
        android:id="@+id/app_logo_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_view_logo_description"
        android:src="@drawable/ic_isports_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints="username"
        android:background="@color/grey_tint_50"
        android:drawableStart="@drawable/ic_action_email"
        android:drawablePadding="20dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_cadastro" />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/grey_tint_50"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="20dp"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_Button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:backgroundTint="@color/grey_tint_50"
        android:text="@string/loginButton_Text"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit_text" />

    <TextView
        android:id="@+id/cadastro_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_cadastro_label"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Button" />

    <TextView
        android:id="@+id/esqueci_senha_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/login_esqueci_senha_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>