<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroFragment"
    android:background="@color/black_tint_30">

    <ImageView
        android:id="@+id/app_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_view_logo_description"
        android:src="@drawable/ic_isports_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/grey_tint_50"
        android:hint="@string/signup_email_hint"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_action_perfil"
        android:drawablePadding="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_login" />

    <EditText
        android:id="@+id/signup_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/grey_tint_50"
        android:hint="@string/login_username_hint"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_action_perfil"
        android:drawablePadding="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_edit_text" />

    <EditText
        android:id="@+id/signup_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/grey_tint_50"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_edit_text" />

    <EditText
        android:id="@+id/signup_confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/grey_tint_50"
        android:hint="@string/signup_confirm_password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:backgroundTint="@color/grey_tint_50"
        android:text="@string/signupbuttom_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>