<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NovoJogoFragment">

    <Spinner
        android:id="@+id/tipos_jogos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_game_data_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/data_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tipos_jogos"
        app:layout_constraintTop_toBottomOf="@+id/tipos_jogos" />

    <TextView
        android:id="@+id/new_game_time_De"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/explorar_hora_de_text_default"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/new_game_data_de"
        app:layout_constraintTop_toTopOf="@+id/new_game_data_de" />

    <TextView
        android:id="@+id/new_game_time_Ate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/explorar_hora_ate_text_default"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/new_game_time_De"
        app:layout_constraintTop_toTopOf="@+id/new_game_time_De" />

    <EditText
        android:id="@+id/cadastro_endereço_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/signup_address_hint"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableStart="@drawable/ic_baseline_home"
        android:drawablePadding="20dp"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_time_Ate" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_game_Button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:backgroundTint="@color/grey_tint_50"
        android:text="@string/novo_jogo_button_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_endereço_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>