<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_tint_30"
    tools:context=".view.ExplorarFragment">

    <Spinner
        android:id="@+id/tipos_jogos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/grey_tint_50"
        android:contentDescription="@string/todo"
        android:minHeight="48dp"
        android:padding="20dp"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <TextView
        android:id="@+id/explorar_match_not_found_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_not_found"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explorar_filtrar_button" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_explorar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_alignParentBottom="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_dateDe"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tipos_jogos"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/textField_dateAte"
        android:hint="@string/explorar_date_de_text_default">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/explorar_data_de"
            android:layout_width="match_parent"
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_dateAte"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tipos_jogos"
        android:layout_alignEnd="@id/tipos_jogos"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="@string/explorar_date_ate_text_default"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/explorar_data_ate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_timeDe"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textField_dateAte"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@id/textField_timeAte"
        android:hint="@string/explorar_hora_de_text_default"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/explorar_time_de"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_timeAte"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textField_dateAte"
        android:layout_alignEnd="@id/tipos_jogos"
        android:layout_marginTop="15dp"
        android:hint="@string/explorar_hora_ate_text_default"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/explorar_time_Ate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/explorar_filtrar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textField_timeAte"
        android:layout_alignEnd="@id/textField_timeAte"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/grey_tint_50"
        android:text="@string/explorar_filtrar_button_text"
        android:textColor="#263238"
        tools:ignore="TextContrastCheck" />
        <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        android:indeterminate="true"
            android:layout_above="@id/scrollview"
        app:indicatorColor="@color/white"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_navigation_explorar"
            android:layout_below="@id/explorar_filtrar_button">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_jogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/explorar_filtrar_button" />
        </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_jogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:contentDescription="@string/fab_add_jogo_description"
        android:src="@drawable/ic_action_plus"
        android:layout_above="@id/bottom_navigation_explorar"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>